overflow fix

--- a/assets/css/style-custom.css
+++ b/assets/css/style-custom.css
@@ -1,14 +1,13 @@
 html,body
 {
     width: 100%;
-    height: 100%;
     margin: 0px;
     padding: 0px;
-    /*overflow-x: hidden; */
+    overflow-x: hidden; 
 	
-	overflow: visible; 
+	/*overflow: visible; 
 	overflow: no-display; 
-	/*above two are suitable for affix, otherwise the affix won't work with other overflow attributs
+	above two are suitable for affix, otherwise the affix won't work with other overflow attributs
 	*/
 }
 
